*28/01/2015* _v1.161.0_

- Ajout d'un bouton pour regénerer toutes les interactions

*26/01/2015* _v1.161.0_

- Ajout fonction averageBetween, maxBetween et minBetween pour les scénarios

*25/01/2015* _v1.160.0_

- Ajout d'une fenêtre d'aide pour la mise en place de conditions dans les scénarios

*23/01/2015* _v1.160.0_

- Ajout action "return" dans les scénarios, pour retourner un message spécifique suite a une intération. Attention à bien cocher la case "Exécuter le plus rapidement possible" pour que ca marche.
- Ajout d'une vérification de la consistence après chaque mise à jour
- Possibilité de supprimé l'historique d'une commande avant une date donnée

*21/01/2015* _v1.160.0_

- Desactivation des contraintes sur la base lors de la mise à jour

*20/01/2015* _v1.160.0_

- Ajout du niveau de batterie sur les widgets

*19/01/2015* _v1.160.0_

- Correction des bugs de regression du parser
- Possibilité d'uploader une archive de plugin directement à partir de l'interface

*16/01/2015* _v1.159.0_

- Utilisation de composer
- Changement de la librairie d'interpretation d'expression 
- Support des couleurs dans les interactions
- Multiple action sur les interactions autorisées (séparé par des &&)

*12/01/2015* _v1.156.0_

- Correction de 2 bugs sur l'export et le partage des scénarios

*11/01/2015* _v1.156.0_

- Stable 1.155.0
- Corrections d'un bug lors de la suppression des commandes

*10/01/2015* _v1.155.0_

- Stable 1.153.0
- Amélioration reconnaissance des intérations qui n'ont que un mot
- Ajout action say dans les scénarios (pour dire un texte sur tous les onglet jeedom ouvert)
- Possibilité de reconnaissance des nombres dans les interactions pour les commandes de type slider (expérimental)

*07/01/2015* _v1.153.0_

- Support de fonction imbriqué dans les scénarios/interaction/virtuel (ex "round(variable(toto),1)" )
- Sortie stable de la version 1.152.0

*07/01/2015* _v1.152.0_

- Ajout d'une page d'information système

*05/01/2015* _v1.152.0_
