@@ -1,6 +1,7 @@
 *28/01/2015* _v1.161.0_
 
 - Ajout d'un bouton pour regénerer toutes les interactions
+- Ajout d'option pour forcer le retour à la ligne avant/après un widget
 
 *26/01/2015* _v1.161.0_
 
